--- a/.github/workflows/hellow_world.yml
+++ b/.github/workflows/hellow_world.yml
@@ -1,29 +1,35 @@
 name: Hello world
-on:
-push:
-branches:
-- main
-jobs:
-first-hello-world-job:
-runs-on:ubuntu-latest
-steps:
--name: checkout code
-uses:actions/checkout@v3
--name:print message
-run:echo"Hello world GA testing"
 
-run-pytest:
-runs-on: ubuntu-latest
-steps:
--name: checkout code
-uses: actions?checkout@v3
--name: setup python
-uses: actions/setup-python@v3
-with:
-python-version:3.9
--name: install dependencies
-run:
-python-m pip install --upgrade pip
-pip install pytest
--name: run testcases
-run: pytest
+on:
+  push:
+    branches:
+      - main
+
+jobs:
+  first-hello-world-job:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Print message
+        run: echo "Hello world GA testing"
+
+  run-pytest:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Set up Python
+        uses: actions/setup-python@v3
+        with:
+          python-version: "3.9"
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install pytest
+
+      - name: Run test cases
+        run: pytest
